Using Templates in Storybook

--- a/stories/Card/Card.css
+++ b/stories/Card/Card.css
@@ -27,3 +27,13 @@
 .size-lg{
     min-height: 115px;
 }
+
+.is-dragable{
+    cursor: pointer;
+
+}
+
+.is-dragable{
+    cursor: grab;
+    user-select: none;
+}
